# WetDelay

./: .gitignore  ARCHITECTURE_VST3.md  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  README.md  UI_ARCHITECTURE_DIAGRAM.md  UI_IMPLEMENTATION_PLAN.md  UI_TROUBLESHOOTING.md  briefing.md  build.bat  build.sh  install.bat  install.sh
.github/workflows/: release.yml  test-build.yml
WetDelay/: CMakeLists.txt
WetDelay/resource/: wetdelayeditor.uidesc
WetDelay/source/: customviewcreator.cpp  customviewcreator.h  delaybuffer.cpp  delaybuffer.h  delaytimebuttonsgroup.cpp  delaytimebuttonsgroup.h  ledmeterview.cpp  ledmeterview.h  version.h  wetdelaycids.h  wetdelaycontroller.cpp  wetdelaycontroller.h  wetdelayentry.cpp  wetdelayprocessor.cpp  wetdelayprocessor.h
scripts/: merge-vst3.sh
